RESOLVED FIXED 225492
r277122 caused a crash in GPU Process
https://bugs.webkit.org/show_bug.cgi?id=225492
Summary r277122 caused a crash in GPU Process
Eric Carlson
Reported 2021-05-06 16:15:14 PDT
r277122 caused a crash in GPU Process
Attachments
Patch (2.06 KB, patch)
2021-05-06 16:19 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2021-05-06 16:15:25 PDT
Eric Carlson
Comment 2 2021-05-06 16:19:19 PDT
EWS
Comment 3 2021-05-06 17:13:13 PDT
Committed r277140 (237427@main): <https://commits.webkit.org/237427@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427951 [details].
Note You need to log in before you can comment on or make changes to this bug.