r277122 caused a crash in GPU Process https://bugs.webkit.org/show_bug.cgi?id=225492 <rdar://problem/77630141>

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer): Have the time observer
call back on the main queue.


Canonical link: https://commits.webkit.org/237427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277140 268f45cc-cd09-0410-ab3c-d52691b4dbfc